--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,58 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
+ansicon==1.89.0
+appdirs==1.4.4
+astor==0.8.1
+async-timeout==4.0.3
+attrs==23.1.0
+blessed==1.20.0
 blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
+dnspython==2.4.2
+et-xmlfile==1.1.0
 Flask==2.3.3
+frozenlist==1.4.0
+git-python==1.0.3
+gitdb==4.0.10
+GitPython==3.1.35
 googlemaps==4.10.0
 idna==3.4
+inquirer==3.1.3
+install==1.3.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jinxed==1.2.0
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+mdurl==0.1.2
+multidict==6.0.4
 numpy==1.25.2
+open-interpreter==0.1.1
+openai==0.27.10
+openpyxl==3.1.2
 pandas==2.1.0
+Pygments==2.16.1
+pymongo==4.5.0
+pyreadline3==3.4.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-editor==1.0.4
 pytz==2023.3.post1
+readchar==4.0.5
+regex==2023.8.8
 requests==2.31.0
+rich==13.5.2
 six==1.16.0
+smmap==5.0.0
+tiktoken==0.4.0
+tokentrim==0.1.10
+tqdm==4.66.1
 tzdata==2023.3
 urllib3==2.0.4
+wcwidth==0.2.6
 Werkzeug==2.3.7
+wget==3.2
+yarl==1.9.2
